QA, fix some test and disable some test to further check.